--- a/notes/00_linalg.qmd
+++ b/notes/00_linalg.qmd
@@ -15,7 +15,7 @@ execute:
 
 Before we dive into the world of machine learning and optimization, it's important that we get comfortable with the fundamental building blocks of mathematics in higher dimensions: Linear Algebra. This course assumes you have seen basic concepts in Linear Algebra, but we'll provide a refresher to get everyone on the same page. 
 
-## Scalars, Vectors, and Matrices 
+## Scalars, Vectors, and Matrices {#sec-linalg}
 
 ### Notation 
 
