Minor Changes to HW1

--- a/homeworks/homework1/Homework1.ipynb
+++ b/homeworks/homework1/Homework1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,7 @@
     "\n",
     "# Use a for-loop to print out the range of each column \n",
     "\n",
-    "\n",
-    "# 4.) Display the first 5 rows of the dataset using the .head() method on the \"df\" variable "
+    "# Display the first 5 rows of the dataset using the .head() method on the \"df\" variable "
    ]
   },
   {
