Minor Changes to HW1

--- a/homeworks/homework1/Homework1.ipynb
+++ b/homeworks/homework1/Homework1.ipynb
@@ -11,7 +11,18 @@
     "\n",
     "### General Homework Policies \n",
     "* You must not import any python libraries unless the question explicitly asks you to do so. \n",
-    "* Some exercises may have a free response question at the end. We are not looking for anything more than a short paragraph for these questions. In some cases, just a sentence will suffice. "
+    "* Some exercises may have a free response question at the end. We are not looking for anything more than a short paragraph for these questions. In some cases, just a sentence will suffice. \n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this on the cluster to allocate compute resources\n",
+    "!salloc -N 1 --ntasks_per_node=1 -t 3:00:00"
    ]
   },
   {
