--- a/notes/references.bib
+++ b/notes/references.bib
@@ -37,3 +37,9 @@
   url = "https://www.math.uwaterloo.ca/~hwolkowi/matrixcookbook.pdf",
   note = "[Accessed November 10, 2024]"
 }
+
+@book{strang2022introduction,
+  title={Introduction to linear algebra},
+  author={Strang, Gilbert},
+  year={2022},
+}
